turtleart.flower.Flower.scala.error
Compilation error:
Flower:43: error: Unmatched closing brace '}' ignored here
}
^